<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.HomeFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="52sp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6sp"
                android:layout_marginRight="16sp"
                android:layout_marginBottom="6sp"

                android:layout_weight="100"
                android:background="@drawable/round_corner"

                android:focusable="false"
                android:focusableInTouchMode="true"
                android:textColor="@color/darkText"

                app:closeIcon="@drawable/none"

                app:defaultQueryHint="@string/name_tag_mail"

                app:iconifiedByDefault="false"

                app:layout_constraintLeft_toLeftOf="@+id/linearLayoutOtmena"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"

                app:queryHint="@string/name_tag_mail"
                app:searchHintIcon="@drawable/none"

                app:searchIcon="@drawable/none"
                app:theme="@style/SearchViewStyle">

            </androidx.appcompat.widget.SearchView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelButton"
                    android:layout_width="54sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:text="@string/cancelButton"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="14sp">

                </androidx.appcompat.widget.AppCompatButton>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/searchButton"
            android:layout_width="20.01sp"
            android:layout_height="20sp"
            android:layout_marginLeft="29.98sp"
            android:background="@drawable/ic_search"
            app:backgroundTint="@color/grayIcons"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />


        <Button
            android:id="@+id/filterButton"
            android:layout_width="20sp"
            android:layout_height="12sp"
            android:layout_marginRight="29.5sp"
            android:background="@drawable/ic_filter"
            app:backgroundTint="@color/grayIcons"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabSlider"
            style="@style/TopAppBar"
            android:layout_width="wrap_content"
            android:layout_height="44sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:tabIndicatorColor="@color/tab_color"
            app:tabIndicatorFullWidth="true"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analytics" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/management" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ios" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qa" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_office" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frontend" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pr" />


            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backend" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="96sp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/user_item" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>